--- a/practicas/red_social/index.html
+++ b/practicas/red_social/index.html
@@ -79,7 +79,7 @@
 
                     <div class="row">
                         <div class="col-auto">
-                            <a href=""><img class="rounded-circle" width="60" height="60" src="/image/persona5.jpg" alt=""></a>
+                            <a href=""><img class="rounded-circle" width="60" height="60" src="../image/persona5.jpg" alt=""></a>
                         </div>
                         <div class="col ">
                             <div class="pb-2">
