--- a/practicas/red_social/index.html
+++ b/practicas/red_social/index.html
@@ -16,7 +16,7 @@
         <div class="contaier">
             <div class="row">
                 <div class="col">
-                    <a href=""><img src="/image/logo.png" alt=""></a>
+                    <a href=""><img src="../../image/logo.png" alt=""></a>
                 </div>
                 <div class="col">
                     <form action="">
@@ -34,7 +34,7 @@
                     <a class="text-white" href=""></a><i class="fas fa-users"></i>
                     <a class="text-white" href=""></a> <i class="fas fa-bell"></i>
                     <a class="text-white" href=""></a> <i class="fas fa-comments"></i>
-                    <a class="text-white" href=""><img class="rounded-circle" src="/image/persona2.jpg" width="22" height="22" alt="">
+                    <a class="text-white" href=""><img class="rounded-circle" src="../../image/persona2.jpg" width="22" height="22" alt="">
                 </nav>
             </div>
         </div>
@@ -56,7 +56,7 @@
                 <div class="col">
                     <div class="row mb-3">
                         <div class="col-auto">
-                            <a class="" href=""><img class="rounded-circle" width="60" height="60" src="/image/persona2.jpg" alt=""></a>
+                            <a class="" href=""><img class="rounded-circle" width="60" height="60" src="../../image/persona2.jpg" alt=""></a>
                         </div>
                         <div class="col">
                             <form action="">
@@ -79,7 +79,7 @@
 
                     <div class="row">
                         <div class="col-auto">
-                            <a href=""><img class="rounded-circle" width="60" height="60" src="../image/persona5.jpg" alt=""></a>
+                            <a href=""><img class="rounded-circle" width="60" height="60" src="../../image/persona5.jpg" alt=""></a>
                         </div>
                         <div class="col ">
                             <div class="pb-2">
@@ -98,7 +98,7 @@
                         <div class="col-10 offset-2">
                             <div class="row no-gutters mt-4 pb-3 border-bottom border-gray">
                                 <div class="col-auto">
-                                    <a href=""><img class="rounded-circle mr-4" width="40" height="40" src="/image/persona2.jpg" alt=""></a>
+                                    <a href=""><img class="rounded-circle mr-4" width="40" height="40" src="../../image/persona2.jpg" alt=""></a>
                                 </div>
                                 <div class="col">
                                     <form action="">
@@ -109,7 +109,7 @@
 
                             <div class="row no-gutters my-3 pb-3 border-bottom border-gray" "=" ">
                         <div class="col-auto ">
-                          <a href=" "><img class="rounded-circle mr-4 " width="40 " height="40 " src="/image/persona2.jpg " alt=" "></a>
+                          <a href=" "><img class="rounded-circle mr-4 " width="40 " height="40 " src="../../image/persona2.jpg " alt=" "></a>
                         </div>
                         <div class="col ">
                           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -120,7 +120,7 @@
         
                       <div class="row no-gutters my-3 pb-3 border-bottom border-gray " "="">
                                 <div class="col-auto">
-                                    <a href=""><img class="rounded-circle mr-4" width="40" height="40" src="/image/persona5.jpg" alt=""></a>
+                                    <a href=""><img class="rounded-circle mr-4" width="40" height="40" src="../../image/persona5.jpg" alt=""></a>
                                 </div>
                                 <div class="col">
                                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -135,13 +135,13 @@
 
                     <div class="row">
                         <div class="col-auto">
-                            <a href=""><img class="rounded-circle" width="60" height="60" src="/image/persona1.jpg" alt=""></a>
+                            <a href=""><img class="rounded-circle" width="60" height="60" src="../../image/persona1.jpg" alt=""></a>
                         </div>
                         <div class="col ">
                             <div class="pb-2">
                                 <h5><a href="">Carlos Lorem</a></h5>
                             </div>
-                            <img class="bg-white p-3 img-fluid w-100 mb-2" src="/image/paisaje1.jpg" alt="">
+                            <img class="bg-white p-3 img-fluid w-100 mb-2" src="../../image/paisaje1.jpg" alt="">
                             <div class="d-flex justify-content-between">
                                 <button class="bg-primary text-white border-0 rounded py-0 px-4"><i class="far fa-thumbs-up" aria-hidden="true"></i></button>
                                 <p class="text-primary align-self-end mb-0 py-2">15 <i class="far fa-thumbs-up mr-3" aria-hidden="true"></i></p>
@@ -153,7 +153,7 @@
                         <div class="col-10 offset-2">
                             <div class="row no-gutters mt-4 pb-3 border-bottom border-gray">
                                 <div class="col-auto">
-                                    <a href=""><img class="rounded-circle mr-4" width="40" height="40" src="/image/persona2.jpg" alt=""></a>
+                                    <a href=""><img class="rounded-circle mr-4" width="40" height="40" src="../../image/persona2.jpg" alt=""></a>
                                 </div>
                                 <div class="col">
                                     <form action="">
@@ -170,13 +170,13 @@
 
                     <div class="row mt-4">
                         <div class="col-auto">
-                            <a href=""><img class="rounded-circle" width="60" height="60" src="/image/persona4.jpg" alt=""></a>
+                            <a href=""><img class="rounded-circle" width="60" height="60" src="../../image/persona4.jpg" alt=""></a>
                         </div>
                         <div class="col ">
                             <div class="pb-2">
                                 <h5><a href="">Alejandro Lorem</a></h5>
                             </div>
-                            <img class="bg-white p-3 img-fluid w-100 mb-2" src="/image/paisaje2.jpg" alt="">
+                            <img class="bg-white p-3 img-fluid w-100 mb-2" src="../../image/paisaje2.jpg" alt="">
                             <div class="d-flex justify-content-between">
                                 <button class="bg-primary text-white border-0 rounded py-0 px-4"><i class="far fa-thumbs-up" aria-hidden="true"></i></button>
                                 <p class="text-primary align-self-end mb-0 py-2">15 <i class="far fa-thumbs-up mr-3" aria-hidden="true"></i></p>
@@ -188,7 +188,7 @@
                         <div class="col-10 offset-2">
                             <div class="row no-gutters mt-4 pb-3 border-bottom border-gray">
                                 <div class="col-auto">
-                                    <a href=""><img class="rounded-circle mr-4" width="40" height="40" src="/image/persona2.jpg" alt=""></a>
+                                    <a href=""><img class="rounded-circle mr-4" width="40" height="40" src="../../image/persona2.jpg" alt=""></a>
                                 </div>
                                 <div class="col">
                                     <form action="">
@@ -204,9 +204,9 @@
                 <div class="col-3 d-none d-lg-block">
                     <h5 class="text-center text-secondary">Publicidad</h5>
                     <div>
-                        <a href=""><img class="mb-2" src="/image/ad11.jpg" width="250" alt=""></a>
-                        <a href=""><img class="mb-2" src="/image/ad22.jpg" width="250" alt=""></a>
-                        <a href=""><img class="mb-2" src="/image/ad33.jpg" width="250" alt=""></a>
+                        <a href=""><img class="mb-2" src="../../image/ad11.jpg" width="250" alt=""></a>
+                        <a href=""><img class="mb-2" src="../../image/ad22.jpg" width="250" alt=""></a>
+                        <a href=""><img class="mb-2" src="../../image/ad33.jpg" width="250" alt=""></a>
                     </div>
                     <div>
                         <a class="mr-3" href="">Privacidad</a>
